(#30) Fixed genres not showing when none selected

--- a/frontend/src/components/movies/index.css
+++ b/frontend/src/components/movies/index.css
@@ -11,6 +11,6 @@
 }
 
 .container>div{
-    margin:5px;
-    height:750px;
+    margin:15px;
+    height: 750px;
 }
